--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,23 @@
 name: sdoq
 channels:
 - defaults
+- anaconda
 - conda-forge
 dependencies:
     - python=3.7
+    - numpy
+    - cudatoolkit=10.1
     - matplotlib
     - scipy
     - ujson
-    - nb_conda_kernels
     - jupyterlab
-    - cudatoolkit=10.1
-    - tensorflow-gpu=2.1
     - pip
     - black
     - flake8
     - tqdm
+    - openssl=1.1.1
+    - tensorflow-gpu=2.1
+    - h5py=2.9.0
     - pip:
-        - "git+httpsL//github.com/facebookresearch/hydra"
+        - "git+https://git@github.com/facebookresearch/hydra@v1.0.0"
         - "git+https://git@github.com/shagunsodhani/ml-logger.git@master#egg=ml_logger[all]"
