--- a/5_train_simulated.yml
+++ b/5_train_simulated.yml
@@ -4,24 +4,24 @@ batch_size: 64
 env_block_size: 16  # important for irm
 plot_every: 100
 clipnorm: 3.0
-init_lr: 3e-4
-min_lr: 3e-5
+init_lr: 1e-4
+min_lr: 1e-5
 half_lr: 50  # before 10
-max_reg: 1e-1
+max_reg: 0.0
 half_reg: 25
 irm_rel_wt: 1.0
 tv_rel_wt: 1.0
 seed: 1498163
-tv_order: 2
+tv_order: 1
 huber_k: 2.0
 reg_warmup: 5
-train_dirs: [normal]
+train_dirs: [normal_mix]
 ood_dirs: [expon_mix]
-logdir: test
+logdir: "."
 
 hydra:
     run:
-        dir: "."
+        dir: "outputs/${hydra.job.override_dirname}"
     job_logging:
         formatters:
             simple:
