--- a/5_train_simulated.yml
+++ b/5_train_simulated.yml
@@ -21,7 +21,7 @@ logdir: "."
 
 hydra:
     run:
-        dir: "outputs/${hydra.job.override_dirname}"
+        dir: "outputs/denoiser/${hydra.job.override_dirname}"
     job_logging:
         formatters:
             simple:
