--- a/environment.yml
+++ b/environment.yml
@@ -19,5 +19,6 @@ dependencies:
     - tensorflow-gpu=2.1
     - h5py=2.9.0
     - pip:
+        - tensorflow-addons
         - "git+https://git@github.com/facebookresearch/hydra@v1.0.0"
         - "git+https://git@github.com/shagunsodhani/ml-logger.git@master#egg=ml_logger[all]"
