--- a/environment.yml
+++ b/environment.yml
@@ -21,3 +21,4 @@ dependencies:
     - pip:
         - "git+https://git@github.com/facebookresearch/hydra@v1.0.0"
         - "git+https://git@github.com/shagunsodhani/ml-logger.git@master#egg=ml_logger[all]"
+        - tensorflow-addons
