--- a/6_munit.yml
+++ b/6_munit.yml
@@ -1,4 +1,8 @@
 epochs: 300
+burnin: 0
+pretrain_identity: 5
+load_pretrained: false
+pretrain_lr: 5e-4
 use_replay: false
 replay_capacity: 20_000
 gen_filters: 32
@@ -11,13 +15,13 @@ replay_blocks: 2
 env_block_size: 32  # important for irm
 plot_every: 100
 clipnorm: 3.0
-init_lr: 1e-4
+init_lr: 5e-4
 half_lr_every: 10
 half_power: 0.75
-smooth_init_lr: 4e-4
+smooth_init_lr: 1e-4
 smooth_batch_size: 32
 smooth_train_steps: 1
-smooth_half_lr_every: 25
+smooth_half_lr_every: 100000
 smooth_lr_multiplier: 1.0
 disc_lr_multiplier: 1.0
 max_noise_ratio: 1.0
